--- a/index.html
+++ b/index.html
@@ -81,27 +81,17 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       }
     </style>
 
-    <!-- MailerLite Universal -->
+    <!-- MailerLite Universal (cleaned: removed trailing-comma risk) -->
     <script>
-      (function (w, d, e, u, f, l, n) {
-        ((w[f] =
-          w[f] ||
-          function () {
-            (w[f].q = w[f].q || []).push(arguments);
-          }),
-          (l = d.createElement(e)),
-          (l.async = 1),
-          (l.src = u),
-          (n = d.getElementsByTagName(e)[0]),
-          n.parentNode.insertBefore(l, n));
-      })(
-        window,
-        document,
-        "script",
-        "https://assets.mailerlite.com/js/universal.js",
-        "ml"
-      );
-      ml("account", "1955610");
+      (function(w, d, e, u, f) {
+        w[f] = w[f] || function() { (w[f].q = w[f].q || []).push(arguments); };
+        var s = d.createElement(e);
+        s.async = 1;
+        s.src = u;
+        var n = d.getElementsByTagName(e)[0];
+        n.parentNode.insertBefore(s, n);
+      })(window, document, 'script', 'https://assets.mailerlite.com/js/universal.js', 'ml');
+      ml('account', '1955610');
     </script>
     <!-- End MailerLite Universal -->
   </head>
