back to original index.html

--- a/index.html
+++ b/index.html
@@ -14,57 +14,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-    
       gtag('config', 'G-DREERNCE4L');
     </script>
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Unbaked - The #1 Weed Addiction App to Quit Weed Forever</title>
-    <meta
-      name="description"
-      content="Quit weed cold turkey with Unbaked: A modern app for overcoming cannabis addiction. Track your detox progress, follow our 6-step roadmap and reclaim your life — no card required for waitlist."
-    />
+
+    <meta name="description" content="Quit weed cold turkey with Unbaked: A modern app for overcoming cannabis addiction. Track your detox progress, follow our 6-step roadmap and reclaim your life — no card required for waitlist." />
     <link rel="canonical" href="https://unbakedapp.com/" />
+
     <!-- Open Graph -->
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Unbaked" />
-    <meta
-      property="og:title"
-      content="Unbaked - The #1 Weed Addiction App to Quit Weed Forever"
-    />
-    <meta
-      property="og:description"
-      content="Quit weed cold turkey with Unbaked: A modern app for overcoming cannabis addiction. Track your detox progress, follow our 6-step roadmap and reclaim your life — no card required for waitlist."
-    />
+    <meta property="og:title" content="Unbaked - The #1 Weed Addiction App to Quit Weed Forever" />
+    <meta property="og:description" content="Quit weed cold turkey with Unbaked: A modern app for overcoming cannabis addiction. Track your detox progress, follow our 6-step roadmap and reclaim your life — no card required for waitlist." />
     <meta property="og:url" content="https://unbakedapp.com/" />
-    <meta
-      property="og:image"
-      content="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2F35794c27937d408c844b7e1b988507ff"
-    />
+    <meta property="og:image" content="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2F35794c27937d408c844b7e1b988507ff" />
     <meta property="og:image:alt" content="Unbaked - Less weed. More you." />
-    <link
-      rel="icon"
-      href="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2Fcbacde6b9d344dac838268fc3eb7c022?format=webp&width=800"
-      type="image/webp"
-    />
-    <link
-      rel="icon"
-      type="image/webp"
-      sizes="32x32"
-      href="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2Fcbacde6b9d344dac838268fc3eb7c022?format=webp&width=32"
-    />
-    <link
-      rel="icon"
-      type="image/webp"
-      sizes="16x16"
-      href="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2Fcbacde6b9d344dac838268fc3eb7c022?format=webp&width=16"
-    />
-    <link
-      rel="apple-touch-icon"
-      sizes="180x180"
-      href="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2Fcbacde6b9d344dac838268fc3eb7c022?format=webp&width=180"
-    />
+
+    <link rel="icon" href="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2Fcbacde6b9d344dac838268fc3eb7c022?format=webp&width=800" type="image/webp" />
+    <link rel="icon" type="image/webp" sizes="32x32" href="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2Fcbacde6b9d344dac838268fc3eb7c022?format=webp&width=32" />
+    <link rel="icon" type="image/webp" sizes="16x16" href="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2Fcbacde6b9d344dac838268fc3eb7c022?format=webp&width=16" />
+    <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.builder.io/api/v1/image/assets%2Fa79f59e10394423cbf0b2f4969bf9328%2Fcbacde6b9d344dac838268fc3eb7c022?format=webp&width=180" />
+
     <meta name="theme-color" content="#01bcff" />
 
     <style>
@@ -81,33 +55,48 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       }
     </style>
 
-    <!-- MailerLite Universal (cleaned: removed trailing-comma risk) -->
+    <!-- MailerLite Universal -->
     <script>
-      (function(w, d, e, u, f) {
-        w[f] = w[f] || function() { (w[f].q = w[f].q || []).push(arguments); };
-        var s = d.createElement(e);
-        s.async = 1;
-        s.src = u;
-        var n = d.getElementsByTagName(e)[0];
-        n.parentNode.insertBefore(s, n);
-      })(window, document, 'script', 'https://assets.mailerlite.com/js/universal.js', 'ml');
-      ml('account', '1955610');
+      (function (w, d, e, u, f, l, n) {
+        ((w[f] = w[f] || function () {
+          (w[f].q = w[f].q || []).push(arguments);
+        }),
+        (l = d.createElement(e)),
+        (l.async = 1),
+        (l.src = u),
+        (n = d.getElementsByTagName(e)[0]),
+        n.parentNode.insertBefore(l, n));
+      })( 
+        window,
+        document,
+        "script",
+        "https://assets.mailerlite.com/js/universal.js",
+        "ml",
+      );
+      ml("account", "1955610");
     </script>
     <!-- End MailerLite Universal -->
   </head>
-<body>
-  <!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53NXTW68"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-  <!-- static SEO hero is present for crawlers and screen readers, but visually hidden via .sr-only -->
-<header id="static-hero" class="sr-only" style="padding:40px 20px; text-align:center;">
-    <h1 style="font-size:2rem; margin:0 0 10px;">Less weed. More you.</h1>
-    <p style="max-width:720px; margin:0 auto 18px;">
-      Quit weed cold turkey with Unbaked — track your detox progress, follow our 6-step roadmap, and reclaim your life.
-      Join the waitlist (no card required).
-    </p>
-  </header>
+
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-53NXTW68" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+
+    <!-- static SEO hero -->
+    <header id="static-hero" class="sr-only" style="padding:40px 20px; text-align:center;">
+      <h1 style="font-size:2rem; margin:0 0 10px;">Less weed. More you.</h1>
+      <p style="max-width:720px; margin:0 auto 18px;">
+        Quit weed cold turkey with Unbaked — track your detox progress, follow our 6-step roadmap, and reclaim your life. Join the waitlist (no card required).
+      </p>
+    </header>
+
+    <div id="root"></div>
+
+    <!-- App boot script -->
+    <script type="module" src="/client/App.tsx"></script>
+  </body>
+</html>
 
   <div id="root"></div>
 
