--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
 <!-- Meta Pixel Code (loader only; no inline init) -->
+<!-- Meta Pixel Code (loader only) — put this in <head> -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
